# vacdm-plugin

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Version.h  Version.h.in  conanfile.py  conanfile.txt  conanprofile  main.cpp  vACDM.cpp  vACDM.h
.github/workflows/: build-develop.yml  build-release.yml  build.yml  clang-format.yml  cmake_project_version.py  determine_dev_release.py  version_handler.py
cmake/: Externals.cmake  FindEuroScope.cmake
com/: Airport.cpp  Airport.h  Ecfmp.cpp  Ecfmp.h  PerformanceLock.h  Server.cpp  Server.h
config/: FileFormat.cpp  FileFormat.h
helper/: String.h
logging/: Logger.cpp  Logger.h  Performance.h
prerefactor/: CMakeLists.txt  Version.h.in  main.cpp  vACDM.h
prerefactor/com/: Airport.cpp  Airport.h  PerformanceLock.h  Server.cpp  Server.h
prerefactor/config/: FileFormat.h
prerefactor/logging/: Logger.cpp  Logger.h  Performance.h
prerefactor/types/: Flight.h  SystemConfig.h
prerefactor/ui/: color.cpp
src/: Version.h.in  main.cpp  main.h  vACDM.cpp  vACDM.h
src/backend/: Server.cpp  Server.h
src/backend/auth/: AuthHandler.cpp  AuthHandler.h
src/config/: ConfigHandler.cpp  ConfigHandler.h  ConfigParser.cpp  ConfigParser.h  PluginConfig.h  vacdm.txt
src/core/: CompileCommands.h  DataManager.cpp  DataManager.h  Server.cpp  Server.h  TagFunctions.h  TagItems.h  TagItemsColor.cpp  TagItemsColor.h
src/handlers/: FileHandler.h
src/log/: Logger.cpp  Logger.h
src/types/: Ecfmp.h  Pilot.h
src/utils/: Date.h  Json.h  Number.h  String.h
types/: Flight.h  Measure.h  SystemConfig.h
ui/: color.cpp  color.h
